--- a/StringsSecondAssignments/.classpath
+++ b/StringsSecondAssignments/.classpath
@@ -2,6 +2,5 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/User/Desktop/utf8&apos;&apos;courserajava.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path=""/>
 </classpath>
